--- a/Speart/src/vista/paneles/evaluacion/PnlIndic.form
+++ b/Speart/src/vista/paneles/evaluacion/PnlIndic.form
@@ -30,6 +30,7 @@
   <SubComponents>
     <Component class="javax.swing.JTextField" name="txtMeta">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="horizontalAlignment" type="int" value="0"/>
       </Properties>
       <Constraints>
@@ -40,6 +41,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtCumplidos">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="horizontalAlignment" type="int" value="0"/>
       </Properties>
       <Constraints>
@@ -50,6 +52,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtPorcentaje">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="horizontalAlignment" type="int" value="0"/>
       </Properties>
       <Constraints>
@@ -60,6 +63,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtNivel">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="horizontalAlignment" type="int" value="0"/>
       </Properties>
       <Constraints>
@@ -69,6 +73,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txtIndicador">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="260" y="0" width="200" height="30"/>
