--- a/Speart/src/vista/paneles/evaluacion/PnlQuejas.form
+++ b/Speart/src/vista/paneles/evaluacion/PnlQuejas.form
@@ -58,18 +58,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JComboBox" name="cbAplicDesc">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
-            <StringItem index="0" value="SI"/>
-            <StringItem index="1" value="NO"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbAplicDescActionPerformed"/>
-      </Events>
+    <Component class="javax.swing.JTextField" name="txtAplicDesc">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="620" y="0" width="170" height="30"/>
